--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,9 @@
 - name: Blog
   link: /blog/
 - name: Products
-  link: /contacts/
+  link: /products/
 - name: Services
-  link: /contacts/
+  link: /services/
 - name: About
   link: /about/
 - name: Contacts
